--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -22,53 +22,47 @@
 
 #top {
   color: black;
-  padding-right: 40px;
+  display: inline-block;
+  padding: 20px 10px;
 }
 
 #content {
     display: flex;
     padding-top: 116px;
-    border: 1px solid black;
     width: 1232px;
     margin: 0 auto 78px auto;
   }
 
 .column.large {
   width: 630px;
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
   margin-right: 32px;
 }
 
 .column.large div {
-  border: 1px solid black;
   display: block;
 }
 
 .column.medium {
   width: 300px;
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
   margin-right: 32px;
 }
 
 .column.medium div {
-  border: 1px solid black;
   display: block;
 }
 
 .column.small {
   width: 240px;
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
   margin-right: 32px;
 }
 
 .column.small div {
-  border: 1px solid black;
   display: block;
 }
 
@@ -77,11 +71,51 @@
   width: 630px;
   margin-top: 0;
   font-size: 40px;
+  display: block;
+}
+
+#earth {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png");
+  width: 300px;
+  height: 300px;
+  margin-top: 15px;
+  display: block;
+}
+
+#research {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png");
+  width: 300px;
+  height: 300px;
+  margin-top: 15px;
+  display: block;
+}
+
+#cats {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png");
+  width: 300px;
+  height: 300px;
+  margin-top: 15px;
+  display: block;
+}
+
+h1 {
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 40px;
+  color: white;
   text-align: left;
 }
 
-#mother h1 {
+h3 {
   font-family: Georgia;
-      font-weight: bold;
-      color: white;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
 }
